# mis-platform

./: .env.example  .env.integration.example  .gitignore  AGENTS.md  README.md  mis_ai_deep_integration_blueprint_prd.md  mis_ai_integration_architecture.md  mis_ai_platform_integration_assessment.md
agent/ai-platform/backend/: .env.example  CLASS_DEPENDENCY.md  CODE_READING_GUIDE.md  alembic.ini  pyproject.toml
agent/ai-platform/backend/alembic/: env.py
agent/ai-platform/backend/alembic/versions/: 001_add_agent_memory.py
agent/ai-platform/backend/scripts/: analyze_type_annotations.py  annotate_local_vars.py  annotate_local_vars_pass2.py
agent/ai-platform/backend/src/: __init__.py  config.py  main.py
agent/ai-platform/backend/src/adapters/: base.py  crm_adapter.py  department_store_adapter.py  finance_adapter.py  hr_adapter.py  property_adapter.py  retail_adapter.py  valuecard_adapter.py
agent/ai-platform/backend/src/agent/: __init__.py  config.py  lifecycle.py  manager.py  runtime_setup.py  session.py
agent/ai-platform/backend/src/api/: __init__.py  deps.py  response.py
agent/ai-platform/backend/src/bootstrap/: skills_mcp.py
agent/ai-platform/backend/src/config_manager/: __init__.py  loader.py  manager.py  sync.py  validator.py  watcher.py
agent/ai-platform/backend/src/db/: __init__.py  session.py
agent/ai-platform/backend/src/hitl/: __init__.py  approval.py  store.py
agent/ai-platform/backend/src/identity/: auth.py  credential_mapper.py  (+7 more)
agent/ai-platform/backend/tests/: conftest.py  test_agent_router.py  test_api_response.py  test_crypto.py  test_fusion_config.py  test_identity_enrichment.py  test_llm_gateway.py  test_memory_manager.py  test_mis_integration.py  test_mis_stream.py  test_permissions.py  test_skill_ranker.py  test_token.py
(+769 files in other folders)
