[project]
name = "ai-platform-backend"
version = "1.0.0"
description = "企业内部 AI 平台 — Agent Core 后端服务"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "redis[hiredis]>=5.0.0",
    "qdrant-client>=1.9.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "structlog>=24.1.0",
    "mcp>=0.1.0",
    "openai>=1.30.0",
    "dashscope>=1.20.0",
    "watchdog>=4.0.0",
    "cryptography>=42.0.0",
    "bcrypt>=4.1.0",
    "tiktoken>=0.7.0",
    "python-multipart>=0.0.9",
    "tenacity>=8.2.0",
    "pyyaml>=6.0",
    "APScheduler>=3.10.0",
    "openharness-ai>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0",
    "types-redis>=4.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
